--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
         <!-- Header -->
@@ -59,13 +61,15 @@
             <div class="task-panel" id="task2">
                 <div class="panel-header">
                     <h2>Task 2: Relationship between cholesterol, blood pressure, and heart disease</h2>
-                    <p class="description">Scatter plot comparing cholesterol and resting blood pressure by disease status</p>
+                    <p class="description">Scatter plot comparing cholesterol and resting blood pressure by disease
+                        status</p>
                 </div>
                 <div id="visualization-task2" class="visualization-container">
                     <!-- D3 visualization will be rendered here -->
                 </div>
                 <div class="panel-footer">
-                    <p class="task-info">Variables: Cholesterol (chol) vs Resting BP (trestbps) colored by Disease (target)</p>
+                    <p class="task-info">Variables: Cholesterol (chol) vs Resting BP (trestbps) colored by Disease
+                        (target)</p>
                 </div>
             </div>
 
@@ -107,7 +111,8 @@
                     <!-- D3 visualization will be rendered here -->
                 </div>
                 <div class="panel-footer">
-                    <p class="task-info">Variables: Max Heart Rate (thalach) vs Age colored by Angina (exang), sized by Disease (target)</p>
+                    <p class="task-info">Variables: Max Heart Rate (thalach) vs Age colored by Angina (exang), sized by
+                        Disease (target)</p>
                 </div>
             </div>
         </main>
@@ -127,4 +132,5 @@
     <script src="js/task5.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
